# plaquette-ibm-backend

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codestyle.yml  e2e_tests.yml  pypi.yml  tests.yml
docs/: Makefile  api.rst  conf.py  index.rst
docs/_static/css/: custom.css
src/plaquette_ibm_backend/: __init__.py  __main__.py  backend.py
tests/integrationtests/: workflow_test.py
tests/unittests/: ibm_backend_test.py
