[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plaquette-ibm-backend"
authors = [
    {name="QC Design GmbH", email="software@qc.design"}
]
description = "Plugin connecting plaquette to the IBM Quantum Systems and Simulators"
dynamic = ["version", "readme", "dependencies"]
requires-python = ">=3.10"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
keywords = ["Quantum error correction"]

[project.urls]
"Homepage" = "https://docs.plaquette.design/projects/ibm-backend"
"Bug Tracker" = "https://github.com/qc-design/plaquette-ibm-backend/issues"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
allow_redefinition = true

[tool.ruff]
select = ["B", "D", "E", "F", "I"]
ignore = ["B905"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[project.entry-points."plaquette.device"]
ibm = "plaquette_ibm_backend.backend:IBMBackend"

[tool.ruff.isort]
known-first-party = ["plaquette"]
order-by-type = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "plaquette_ibm_backend.__version__"}
readme = {file = ["README.rst"]}
dependencies = {file = ["requirements.txt"]}
